--- a/katmovie.html
+++ b/katmovie.html
@@ -64,7 +64,7 @@
 
   <!-- MDB -->
   <script type="text/javascript" src="https://vegamovies.pages.dev/js/mdb.min.js"></script>
-  <script type="text/javascript" src="./script.js"></script>
+  <script type="text/javascript" src="./scriptkatmovie.js"></script>
   <!-- Custom scripts -->
   <script type="text/javascript">
 
