--- a/index.html
+++ b/index.html
@@ -12,8 +12,36 @@
 
   
   <div class="row">
-    <div class="col s6 l3 m6">2</div>
-    <div class="col s6 l3 m6">2</div>
+
+    <div class="col s6 l3 m6">
+      <a class="waves-effect waves-light btn" href="https://olamovies.pages.dev/">OLAMOVIES</a>
+    </div>
+
+    <div class="col s6 l3 m6">
+      <a class="waves-effect waves-light btn" href="https://vegamovies.pages.dev/">vegamovies</a>
+    </div>
+
+    <div class="col s6 l3 m6">
+      <a class="waves-effect waves-light btn" href="https://hdhub.pages.dev/">HDHUB</a>
+    </div>
+
+
+
+    <div class="col s6 l3 m6">
+      <a class="waves-effect waves-light btn" href="https://movieverse.pages.dev/">movieverse</a>
+    </div>
+
+
+    
+    <div class="col s6 l3 m6">
+      <a class="waves-effect waves-light btn" href="./katmovie.html">katmovie</a>
+    </div>
+
+    <div class="col s6 l3 m6">
+      <a class="waves-effect waves-light btn" href="./katmovie18.html">katmovie 18</a>
+    </div>
+
+
   </div>
         
   
