--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
   
-  <div class="row">
+  <div class="row container">
 
     <div class="col s6 l3 m6">
       <a class="waves-effect waves-light btn" href="https://olamovies.pages.dev/">OLAMOVIES</a>
