--- a/index.html
+++ b/index.html
@@ -33,6 +33,30 @@
 
 
     
+
+    <div class="col s6 l3 m6">
+      <a class="waves-effect waves-light btn" href="./full4movie.html">full 4 Movies</a>
+    </div>
+
+    
+    <div class="col s6 l3 m6">
+      <a class="waves-effect waves-light btn" href="./yomovies.html">Yomovies</a>
+    </div>
+
+    <div class="col s6 l3 m6">
+      <a class="waves-effect waves-light btn" href="./worldfree4u.html">Worldfree4u</a>
+    </div>
+
+    <div class="col s6 l3 m6">
+      <a class="waves-effect waves-light btn" href="./9xmov.html">9XMOVIES</a>
+    </div>
+
+    <div class="col s6 l3 m6">
+      <a class="waves-effect waves-light btn" href="./downloadhub.html">DownloadHUB</a>
+    </div>
+
+
+
     <div class="col s6 l3 m6">
       <a class="waves-effect waves-light btn" href="./katmovie.html">katmovie</a>
     </div>
@@ -40,6 +64,7 @@
     <div class="col s6 l3 m6">
       <a class="waves-effect waves-light btn" href="./katmovie18.html">katmovie 18</a>
     </div>
+
 
 
   </div>
