--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
       <a class="waves-effect waves-light btn" href="./katmovie18.html">katmovie 18</a>
     </div>
 
+    <div class="col s6 l3 m6">
+      <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://themoviesflix.com.se">THEMOVIEFLIX</a>
+    </div>
+
 
     
     <div class="col s6 l3 m6">
