--- a/index.html
+++ b/index.html
@@ -69,6 +69,15 @@
       <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://themoviesflix.com.se">THEMOVIEFLIX</a>
     </div>
 
+<div class="col s6 l3 m6">
+      <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://bollyflix.sbs">BOLLYFLIX</a>
+    </div>
+
+<div class="col s6 l3 m6">
+      <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://bolly4u.yoga">bolly4u</a>
+    </div>
+
+
 
     
     <div class="col s6 l3 m6">
