--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="row container">
 
     <div class="col s6 l3 m6">
-      <a class="waves-effect waves-light btn" href="https://olamovies.pages.dev/">OLAMOVIES</a>
+      <a class="waves-effect green waves-light btn" href="https://olamovies.pages.dev/">OLAMOVIES</a>
     </div>
 
     <div class="col s6 l3 m6">
@@ -74,7 +74,7 @@
     </div>
 
 <div class="col s6 l3 m6">
-      <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://bolly4u.yoga">bolly4u</a>
+      <a class="waves-effect green waves-light btn" href="./dynamic.html?domain=https://bolly4u.yoga">bolly4u</a>
     </div>
 
 
@@ -90,7 +90,45 @@
       <a class="waves-effect waves-light btn" href="https://proxy.goincop1.workers.dev/https/www.1337x.to">1337x</a>
     </div>
 
-    
+    <Br>
+
+<div class="col s6 l3 m6">
+      <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://i.moviescounter.casa">moviescounter</a>
+    </div>
+
+<div class="col s6 l3 m6">
+      <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://www.ssrmovies.icu">ssrmovie</a>
+    </div>
+
+
+
+<div class="col s6 l3 m6">
+      <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://www.uwatchfree.so">uwatchfree</a>
+    </div>
+
+
+<div class="col s6 l3 m6">
+      <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://myflixer.life">myflixer</a>
+    </div>
+
+
+<div class="col s6 l3 m6">
+      <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://123mkv.media">123mkv</a>
+    </div>
+
+
+<div class="col s6 l3 m6">
+      <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://176.123.8.15">mkvking</a>
+    </div>
+
+
+
+
+
+<div class="col s6 l3 m6">
+      <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://hdmoviearea.vip">hdmovies area</a>
+    </div>
+
 
     <!-- p -->
 
