--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
 
 <div class="col s6 l3 m6">
-      <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://176.123.8.15">mkvking</a>
+      <a class="waves-effect waves-light btn" href="./dynamic.html?domain=http://176.123.8.15">mkvking</a>
     </div>
 
 
