--- a/index.html
+++ b/index.html
@@ -142,6 +142,13 @@
       <a class="waves-effect waves-light btn red" href="./dynamic.html?domain=https://extramovies.bike">extramovies.bike</a>
     </div>
 
+
+<br><br><br>
+<h3>other sites</h3>
+<div class="col s6 l3 m6">
+      <a class="waves-effect waves-light btn blue" href="./dynamic.html?domain=https://getcomics.info">Comics</a>
+    </div>
+
       
 
     <!-- p -->
