--- a/dynamic.html
+++ b/dynamic.html
@@ -102,19 +102,39 @@ function getWordStr(str) {
 }
 
 
-var baseUrl = "https://thawning.tanishagoyal.repl.co/api?uri=";
+
+
+
+
+
+// var baseUrl = "https://thawning.tanishagoyal.repl.co/api?uri=";
+
+// function getCategoryUri(catid){
+//     return(baseUrl + encodeURIComponent(domain + "/wp-json/wp/v2/posts?_embed&categories="+catid));
+// }
+
+
+// function getSearchurl(query){
+//     // return `${baseUrl + encodeURIComponent(`/wp-json/wp/v2/search?_embed&search=${query}&per_page=10`) }`;
+//     return `${baseUrl + encodeURIComponent(domain +`/wp-json/wp/v2/posts?_embed&search=${query}&per_page=70`) }`;
+// }
+
+// var latestPosts = baseUrl + encodeURIComponent(domain +"/wp-json/wp/v2/posts?_embed=1&per_page=50");
+
+
+var baseUrl = "https://home.techiebank.workers.dev/http/";
 
 function getCategoryUri(catid){
-    return(baseUrl + encodeURIComponent(domain + "/wp-json/wp/v2/posts?_embed&categories="+catid));
+    return(baseUrl + domain + "/wp-json/wp/v2/posts?categories="+catid);
 }
 
 
 function getSearchurl(query){
     // return `${baseUrl + encodeURIComponent(`/wp-json/wp/v2/search?_embed&search=${query}&per_page=10`) }`;
-    return `${baseUrl + encodeURIComponent(domain +`/wp-json/wp/v2/posts?_embed&search=${query}&per_page=70`) }`;
+    return `${baseUrl + domain +`/wp-json/wp/v2/posts?search=${query}&per_page=70` }`;
 }
 
-var latestPosts = baseUrl + encodeURIComponent(domain +"/wp-json/wp/v2/posts?_embed=1&per_page=50");
+var latestPosts = baseUrl + domain +"/wp-json/wp/v2/posts?per_page=50";
 
 // async function getLatestPosts(){
 //     return makeRequest("GET", latestPosts);
