--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
 
 <div class="col s6 l3 m6">
-      <a class="waves-effect green waves-light btn" href="./dynamic.html?domain=https://bolly4u.yoga">bolly4u</a>
+      <a class="waves-effect green waves-light btn" href="./dynamic.html?domain=https://bolly4u.rest">bolly4u</a>
     </div>
 
 
