--- a/dynamic.html
+++ b/dynamic.html
@@ -125,16 +125,16 @@ function getWordStr(str) {
 var baseUrl = "https://home.techiebank.workers.dev/http/";
 
 function getCategoryUri(catid){
-    return(baseUrl + domain + "/wp-json/wp/v2/posts?categories="+catid);
+    return(baseUrl + domain + "/wp-json/wp/v2/posts?_embed&categories="+catid);
 }
 
 
 function getSearchurl(query){
     // return `${baseUrl + encodeURIComponent(`/wp-json/wp/v2/search?_embed&search=${query}&per_page=10`) }`;
-    return `${baseUrl + domain +`/wp-json/wp/v2/posts?search=${query}&per_page=70` }`;
+    return `${baseUrl + domain +`/wp-json/wp/v2/posts?_embed&search=${query}&per_page=70` }`;
 }
 
-var latestPosts = baseUrl + domain +"/wp-json/wp/v2/posts";
+var latestPosts = baseUrl + domain +"/wp-json/wp/v2/posts?_embed";
 
 // async function getLatestPosts(){
 //     return makeRequest("GET", latestPosts);
