--- a/dynamic.html
+++ b/dynamic.html
@@ -67,6 +67,8 @@
   <script type="text/javascript">
     var url = new URL(window.location.href);
 var domain = url.searchParams.get("domain");
+var DISABLEMOREPAGE = url.searchParams.get("DISABLEMOREPAGE");
+    
 
 
     function makeRequest(method, url) {
@@ -131,10 +133,18 @@ function getCategoryUri(catid){
 
 function getSearchurl(query){
     // return `${baseUrl + encodeURIComponent(`/wp-json/wp/v2/search?_embed&search=${query}&per_page=10`) }`;
-    return `${baseUrl + domain +`/wp-json/wp/v2/posts?_embed&search=${query}&per_page=70` }`;
+      if(DISABLEMOREPAGE){
+                    return `${baseUrl + domain +`/wp-json/wp/v2/posts?_embed&search=${query}` }`;
+      }else{
+            return `${baseUrl + domain +`/wp-json/wp/v2/posts?_embed&search=${query}&per_page=70` }`;
+      }
 }
 
-var latestPosts = baseUrl + domain +"/wp-json/wp/v2/posts?_embed";
+    if(DISABLEMOREPAGE){
+      var latestPosts = baseUrl + domain +"/wp-json/wp/v2/posts?_embed";
+    }else{
+            var latestPosts = baseUrl + domain +"/wp-json/wp/v2/posts?_embed&per_page=50";
+    }
 
 // async function getLatestPosts(){
 //     return makeRequest("GET", latestPosts);
