--- a/index.html
+++ b/index.html
@@ -144,9 +144,10 @@
 
 
 <br><br><br>
+<br><br><br>
 <h3>other sites</h3>
 <div class="col s6 l3 m6">
-      <a class="waves-effect waves-light btn blue" href="./dynamic.html?domain=https://getcomics.info">Comics</a>
+      <a class="waves-effect waves-light btn blue" href="./dynamic.html?domain=https://getcomics.info&DISABLEMOREPAGE=1">Comics</a>
     </div>
 
       
