--- a/index.html
+++ b/index.html
@@ -142,10 +142,13 @@
       <a class="waves-effect waves-light btn red" href="./dynamic.html?domain=https://extramovies.bike">extramovies.bike</a>
     </div>
 
+    </div>
 
-<br><br><br>
-<br><br><br>
+    
+    <br><br>
 <h3>other sites</h3>
+        <div class="row container">
+
 <div class="col s6 l3 m6">
       <a class="waves-effect waves-light btn blue" href="./dynamic.html?domain=https://getcomics.info&DISABLEMOREPAGE=1">Comics</a>
     </div>
