--- a/katmovie.html
+++ b/katmovie.html
@@ -29,6 +29,8 @@
           <input type="search" id="form1" class="form-control" />
           <label class="form-label" for="form1">Search</label>
         </div>
+        <input type="submit" hidden />
+
         <button type="button" class="btn btn-primary" onclick="doSearch()">
           <i class="fas fa-search"></i>
         </button>
@@ -86,13 +88,13 @@
           // content = content.replace("https://i.imgur.com/", "https://thawning.tanishagoyal.repl.co/api?uri=https://i.imgur.com/");
           content = content.replaceAll('/download/?key=', 'https://flaskstreamer.lolhoinc.repl.co/olamov?key=');
           // content = content.replace('https://olamovies.site', 'https://thawning.tanishagoyal.repl.co/api?uri=https://olamovies.site');
-      
-          if(Array.isArray(i["_embedded"]["wp:featuredmedia"])){
-                var img = i["_embedded"]["wp:featuredmedia"][0]["source_url"];
-              }
-              else{
-                var img = "https://images.pexels.com/photos/771742/pexels-photo-771742.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500";
-              }
+
+          if (Array.isArray(i["_embedded"]["wp:featuredmedia"])) {
+            var img = i["_embedded"]["wp:featuredmedia"][0]["source_url"];
+          }
+          else {
+            var img = "https://images.pexels.com/photos/771742/pexels-photo-771742.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500";
+          }
 
 
           // console.log(i);
@@ -174,10 +176,10 @@
               var content = i['content']['rendered'];
               content = content.replaceAll('/download/?key=', 'https://flaskstreamer.lolhoinc.repl.co/olamov?key=');
 
-              if(Array.isArray(i["_embedded"]["wp:featuredmedia"])){
+              if (Array.isArray(i["_embedded"]["wp:featuredmedia"])) {
                 var img = i["_embedded"]["wp:featuredmedia"][0]["source_url"];
               }
-              else{
+              else {
                 var img = "https://images.pexels.com/photos/771742/pexels-photo-771742.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500";
               }
 
