--- a/katmovie18.html
+++ b/katmovie18.html
@@ -29,6 +29,9 @@
           <input type="search" id="form1" class="form-control" />
           <label class="form-label" for="form1">Search</label>
         </div>
+        <input type="submit" hidden />
+
+        
         <button type="button" class="btn btn-primary" onclick="doSearch()">
           <i class="fas fa-search"></i>
         </button>
