--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     </div>
       
             <div class="col s6 l3 m6">
-      <a class="waves-effect waves-light btn red" href="./dynamic.html?domain=https://extramovies.bike">extramovies.bike</a>
+      <a class="waves-effect waves-light btn red" href="./dynamic.html?domain=https://extramovies.tel">extramovies.bike</a>
     </div>
 
     </div>
