--- a/extramovies.html
+++ b/extramovies.html
@@ -188,7 +188,7 @@
         <h5 class="modal-title" id="exampleModalLabel">${i['title']['rendered']}</h5>
         <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
       </div>
-      <div class="modal-body">${content}</div>
+      <div class="modal-body">${doc.documentElement.innerHTML}</div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Close</button>
       </div>
@@ -292,7 +292,7 @@
   <h5 class="modal-title" id="exampleModalLabel">${i['title']['rendered']}</h5>
   <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
 </div>
-<div class="modal-body">${content}</div>
+<div class="modal-body">${doc.documentElement.innerHTML}</div>
 <div class="modal-footer">
   <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Close</button>
 </div>
