--- a/extramovies.html
+++ b/extramovies.html
@@ -153,7 +153,7 @@
                         var doc = parser.parseFromString(content, "text/html");
                         var a = doc.getElementsByTagName("a");
                         for (c = 0; c < a.length; c++) {
-                            a[c].href = "javascript:loadEpisodes('" + domaiN + a[c].href + "');";
+                            a[c].href = "javascript:loadEpisodes('" + domaiN + a[c].href.replace("https://moviesites.pages.dev","") + "');";
                         }
 
                         var aa = doc.getElementsByTagName("img");
@@ -259,7 +259,7 @@
                             var doc = parser.parseFromString(content, "text/html");
                             var a = doc.getElementsByTagName("a");
                             for (c = 0; c < a.length; c++) {
-                                a[c].href = "javascript:loadEpisodes('" + domaiN  + a[c].href + "');";
+                                a[c].href = "javascript:loadEpisodes('" + domaiN  + a[c].href.replace("https://moviesites.pages.dev","") + "');";
                             }
 
                             var aa = doc.getElementsByTagName("img");
@@ -395,7 +395,7 @@
 
                         var a = doc.getElementsByTagName("a");
                         for (c = 0; c < a.length; c++) {
-                            a[c].href = "javascript:loadEpisodes('" +domain + a[c].href + "');";
+                            a[c].href = "javascript:loadEpisodes('" +domain + a[c].href.replace("https://moviesites.pages.dev","") + "');";
                         }
 
 
