--- a/index.html
+++ b/index.html
@@ -127,6 +127,12 @@
     </div>
 
 
+    
+<div class="col s6 l3 m6">
+  <a class="waves-effect waves-light btn blue" href="./15/lordhd.html">LORD HD</a>
+</div>
+
+
 
 
 
