--- a/index.html
+++ b/index.html
@@ -137,9 +137,22 @@
 
 
 <div class="col s6 l3 m6">
-      <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://hdmoviearea.vip">hdmovies area</a>
-    </div>
+  <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://hdmoviearea.vip">hdmovies area</a>
+</div>
+
+<div class="col s6 l3 m6">
+  <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://hindmovie.mobi/">hindmovie area</a>
+</div>
+
+<div class="col s6 l3 m6">
+  <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://movieslegacy.com/">movieslegacy</a>
+</div>
+
+
+
+
       
+    
       <div class="col s6 l3 m6">
       <a class="waves-effect waves-light btn red" href="./dynamic.html?domain=https://atishmkv.bar">atishmkv</a>
     </div>
