--- a/index.html
+++ b/index.html
@@ -136,17 +136,51 @@
 
 
 
+
+
+
+
+
+
 <div class="col s6 l3 m6">
   <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://hdmoviearea.vip">hdmovies area</a>
 </div>
 
 <div class="col s6 l3 m6">
-  <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://hindmovie.mobi/">hindmovie area</a>
+  <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://hindmovie.mobi">hindmovie area</a>
 </div>
 
 <div class="col s6 l3 m6">
-  <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://movieslegacy.com/">movieslegacy</a>
+  <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://movieslegacy.com">movieslegacy</a>
 </div>
+
+<div class="col s6 l3 m6">
+  <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://www.mkvcinemas.ch">mkvcinemas</a>
+</div>
+
+<div class="col s6 l3 m6">
+  <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://www.uncuthd.sbs">uncuthd</a>
+</div>
+
+<div class="col s6 l3 m6">
+  <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://boimovies.space">boimovies</a>
+</div>
+<div class="col s6 l3 m6">
+  <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://mkvanime.in">mkvanime</a>
+</div>
+<div class="col s6 l3 m6">
+  <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://bollyhubhd.xyz">bollyhubhd</a>
+</div>
+<div class="col s6 l3 m6">
+  <a class="waves-effect waves-light btn" href="./dynamic.html?domain=https://bestrank.tokyo">FilmyGodonline</a>
+</div>
+
+
+
+
+
+
+
 
 
 
