--- a/dynamic.html
+++ b/dynamic.html
@@ -127,7 +127,9 @@
     // var latestPosts = baseUrl + encodeURIComponent(domain +"/wp-json/wp/v2/posts?_embed=1&per_page=50");
 
 
-    var baseUrl = "https://home.techiebank.workers.dev/http/";
+//     var baseUrl = "https://home.techiebank.workers.dev/http/";
+    var baseUrl = " https://proxy.goincop1.workers.dev/";
+   
 
     function getCategoryUri(catid) {
       return (baseUrl + domain + "/wp-json/wp/v2/posts?_embed&categories=" + catid);
@@ -137,16 +139,16 @@
     function getSearchurl(query) {
       // return `${baseUrl + encodeURIComponent(`/wp-json/wp/v2/search?_embed&search=${query}&per_page=10`) }`;
       if (DISABLEMOREPAGE) {
-        return `${baseUrl + domain + `/wp-json/wp/v2/posts?_embed&search=${query}`}`;
+        return `${baseUrl + domain.replace("https://","https/").replace("http://","http/") + `/wp-json/wp/v2/posts?_embed&search=${query}`}`;
       } else {
-        return `${baseUrl + domain + `/wp-json/wp/v2/posts?_embed&search=${query}&per_page=70`}`;
+        return `${baseUrl + domain.replace("https://","https/").replace("http://","http/") + `/wp-json/wp/v2/posts?_embed&search=${query}&per_page=70`}`;
       }
     }
 
     if (DISABLEMOREPAGE) {
-      var latestPosts = baseUrl + domain + "/wp-json/wp/v2/posts?_embed";
+      var latestPosts = baseUrl + domain.replace("https://","https/").replace("http://","http/") + "/wp-json/wp/v2/posts?_embed";
     } else {
-      var latestPosts = baseUrl + domain + "/wp-json/wp/v2/posts?_embed&per_page=20";
+      var latestPosts = baseUrl + domain.replace("https://","https/").replace("http://","http/") + "/wp-json/wp/v2/posts?_embed&per_page=20";
     }
 
 // async function getLatestPosts(){
