--- a/dynamic.html
+++ b/dynamic.html
@@ -112,44 +112,52 @@
 
 
 
-    // var baseUrl = "https://thawning.tanishagoyal.repl.co/api?uri=";
+    var baseUrl = "https://thawning.tanishagoyal.repl.co/api?uri=";
 
-    // function getCategoryUri(catid){
-    //     return(baseUrl + encodeURIComponent(domain + "/wp-json/wp/v2/posts?_embed&categories="+catid));
-    // }
+    function getCategoryUri(catid){
+        return(baseUrl + encodeURIComponent(domain + "/wp-json/wp/v2/posts?_embed&categories="+catid));
+    }
 
 
-    // function getSearchurl(query){
-    //     // return `${baseUrl + encodeURIComponent(`/wp-json/wp/v2/search?_embed&search=${query}&per_page=10`) }`;
-    //     return `${baseUrl + encodeURIComponent(domain +`/wp-json/wp/v2/posts?_embed&search=${query}&per_page=70`) }`;
-    // }
+    function getSearchurl(query){
+        // return `${baseUrl + encodeURIComponent(`/wp-json/wp/v2/search?_embed&search=${query}&per_page=10`) }`;
+      if (DISABLEMOREPAGE) {
+        return `${baseUrl + encodeURIComponent(domain +`/wp-json/wp/v2/posts?_embed&search=${query}`) }`;
+      }else{
+              return `${baseUrl + encodeURIComponent(domain +`/wp-json/wp/v2/posts?_embed&search=${query}&per_page=40`) }`;
+         }
+    }
 
-    // var latestPosts = baseUrl + encodeURIComponent(domain +"/wp-json/wp/v2/posts?_embed=1&per_page=50");
-
+        if (DISABLEMOREPAGE) {
+    var latestPosts = baseUrl + encodeURIComponent(domain +"/wp-json/wp/v2/posts?_embed=1");
+    } else {
+    var latestPosts = baseUrl + encodeURIComponent(domain +"/wp-json/wp/v2/posts?_embed=1&per_page=20");
+    }
 
 //     var baseUrl = "https://home.techiebank.workers.dev/http/";
-    var baseUrl = " https://proxy.goincop1.workers.dev/";
+//     var baseUrl = " https://proxy.goincop1.workers.dev/";
    
 
-    function getCategoryUri(catid) {
-      return (baseUrl + domain + "/wp-json/wp/v2/posts?_embed&categories=" + catid);
-    }
+//     function getCategoryUri(catid) {
+//       return (baseUrl + domain + "/wp-json/wp/v2/posts?_embed&categories=" + catid);
+//     }
 
 
-    function getSearchurl(query) {
-      // return `${baseUrl + encodeURIComponent(`/wp-json/wp/v2/search?_embed&search=${query}&per_page=10`) }`;
-      if (DISABLEMOREPAGE) {
-        return `${baseUrl + domain.replace("https://","https/").replace("http://","http/") + `/wp-json/wp/v2/posts?_embed&search=${query}`}`;
-      } else {
-        return `${baseUrl + domain.replace("https://","https/").replace("http://","http/") + `/wp-json/wp/v2/posts?_embed&search=${query}&per_page=70`}`;
-      }
-    }
+//     function getSearchurl(query) {
+//       // return `${baseUrl + encodeURIComponent(`/wp-json/wp/v2/search?_embed&search=${query}&per_page=10`) }`;
+//       if (DISABLEMOREPAGE) {
+// //         return `${baseUrl + domain.replace("https://","https/").replace("http://","http/") + `/wp-json/wp/v2/posts?_embed&search=${query}`}`;
+//         return `${baseUrl + domain + `/wp-json/wp/v2/posts?_embed&search=${query}`}`;
+//       } else {
+//         return `${baseUrl + domain + `/wp-json/wp/v2/posts?_embed&search=${query}&per_page=70`}`;
+//       }
+//     }
 
-    if (DISABLEMOREPAGE) {
-      var latestPosts = baseUrl + domain.replace("https://","https/").replace("http://","http/") + "/wp-json/wp/v2/posts?_embed";
-    } else {
-      var latestPosts = baseUrl + domain.replace("https://","https/").replace("http://","http/") + "/wp-json/wp/v2/posts?_embed&per_page=20";
-    }
+//     if (DISABLEMOREPAGE) {
+//       var latestPosts = baseUrl + domain + "/wp-json/wp/v2/posts?_embed";
+//     } else {
+//       var latestPosts = baseUrl + domain + "/wp-json/wp/v2/posts?_embed&per_page=20";
+//     }
 
 // async function getLatestPosts(){
 //     return makeRequest("GET", latestPosts);
