--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     
     <div class="col s6 l3 m6">
-      <a class="waves-effect waves-light btn" href="https://home.techiebank.workers.dev/-----https://www.1tamilmv.com/">TamilROCKERS</a>
+      <a class="waves-effect waves-light btn" href="https://tamilmv.pages.dev">TamilROCKERS</a>
     </div>
 
 
